staClicking on a provider in the directory sends you to their profile page. Provider profile page begun, including image, bio and read more button at the moment

--- a/src/components/ProviderDirectoryCard/ProviderDirectoryCard.scss
+++ b/src/components/ProviderDirectoryCard/ProviderDirectoryCard.scss
@@ -8,6 +8,7 @@
   height: 167px;
 
   background: #ffffff;
+  text-decoration: none;
 }
 .provider-header {
   display: flex;
@@ -70,6 +71,7 @@
   }
 }
 .provider-bio {
+    margin-bottom: 12px;
   display: -webkit-box;
   overflow: hidden;
   -webkit-line-clamp: 2;
@@ -82,4 +84,29 @@
   letter-spacing: 0.005em;
   color: #6e7178;
   text-overflow: ellipsis;
+}
+.availability {
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 6px 12px;
+
+width: 140px;
+height: 25px;
+
+background: #EFF1FE;
+border-radius: 200px;
+
+&__text {
+    font-family: Helvetica Neue;
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 110%;
+
+letter-spacing: 0.02em;
+
+color: #3F4145;
+}
 }
