--- a/src/pages/ProviderProfile/ProviderProfile.scss
+++ b/src/pages/ProviderProfile/ProviderProfile.scss
@@ -1,6 +1,7 @@
 .provider-profile {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   &__image {
     width: 100%;
@@ -62,26 +63,60 @@
 }
 
 .read-more {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-top: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 16px;
 
-    &__text {
-        margin-right: 6px;
+  &__text {
+    margin-right: 6px;
 
-        font-family: Helvetica Neue;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14.8px;
-        line-height: 120%;
-        letter-spacing: 0.005em;
-  
-        color: #6277f0;
-    }
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14.8px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
 
-    &__chevron {
-        width: 12px;
-        height: 6.75px;
-    }
+    color: #6277f0;
+  }
+
+  &__chevron {
+    width: 12px;
+    height: 6.75px;
+  }
+}
+
+.provider-profile-details-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding: 24px 20px;
+  width: 100%;
+
+  height: 224px;
+}
+
+.book {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 18px 32px;
+margin-bottom: 10px;
+  width: 355px;
+  height: 54px;
+
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+
+  color: #ffffff;
+
+  background: #4b286d;
+  border-radius: 2000px;
 }
