code clean up and formatting

--- a/src/components/NumberOfProviders/NumberOfProviders.scss
+++ b/src/components/NumberOfProviders/NumberOfProviders.scss
@@ -6,7 +6,7 @@
   height: 41px;
 
   &__number {
-      margin-right: 2px;
+    margin-right: 2px;
     font-family: Helvetica Neue;
     font-style: normal;
     font-weight: 500;
@@ -24,9 +24,9 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 120%;
-    
+
     letter-spacing: 0.02em;
-    
-    color: #3F4145;
+
+    color: #3f4145;
   }
 }
