added hover styling for drop down menu

--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -3,6 +3,14 @@
   justify-content: center;
   padding: 5px 16px;
 
+  &:hover {
+    background: #6277F0;
+  }
+
+  &:hover &__option {
+    color: #FFFFFF;
+  }
+
   &__option {
     font-family: Helvetica Neue;
     font-style: normal;
